Description
I fixed this in shell-experiments r62415, which fixes two of the glitches with the start menu running in ReactOS.
Vic suggested:
[17:29] (+vicmarcal|away): gigaherz: Maybe you can create a Patch: Jira entry, describing the issue (copy-paste from the commit) and attaching the patch so we can force a Patchbot test and assign the isse to jimtabor ![]()
The changes in the patch are:
[NTUSER]
[USER32]
- Fix what I think is a wrong behaviour of storing MF_POPUP in the fType of the menu. Now it relies on hSubMenu being != NULL as an indicator of the presence of a submenu.
- Resource submenus are not supposed to get the hSubMenu as a wID, as far as I can tell.
- From the user point of view, it matches Windows better. Needs review and testing, as I don't know if I updated everything correctly.